<?xml version="1.0"?>
<package>
  <name>fcr2017</name>
  <version>5.3.2</version>
  <description>O pacote fcr2017 contém vários nós que permitem que o robô Pioneer mapeie alguns corredores do CIC e vá para uma posição final especificada pelo usuário.</description>

  <maintainer email="thulionoslen_@hotmail.com">Thúlio Noslen Silva Santos</maintainer>
  
  <author email="thulionoslen_@hotmail.com">Thúlio Noslen Silva Santos</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>p2os_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>p2os_msgs</run_depend>
  <run_depend>tf</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
